Improoves enemie spawn and music selection
-enemies spawn in GameController gets cleaner with less lines of code
-Improoves GameMusic script so the next music is always different
-Adds lifes to player, more time before gameover

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\GameMusic.cs" />
      <Compile Include="Assets\Scripts\GameOver.cs" />
      <Compile Include="Assets\Scripts\GridCubeBehavior.cs" />
+     <Compile Include="Assets\Scripts\InfoScript.cs" />
      <Compile Include="Assets\Scripts\Move.cs" />
      <Compile Include="Assets\Scripts\ParticleCollision.cs" />
      <Compile Include="Assets\Scripts\ParticleSystemMultiplier.cs" />
